feat: add user invitation and activation
